--- a/ui/src/pages/home/app-card/app-card.css
+++ b/ui/src/pages/home/app-card/app-card.css
@@ -44,7 +44,7 @@
 }
 
 .card-body {
-  min-height: 75px;
+  min-height: 100px;
   padding: 0.5rem 1.5rem;
 }
 
@@ -56,6 +56,8 @@
 
 .card-footer {
   padding: 0.5rem 1.5rem 1.5rem;
+  display: flex;
+  column-gap: 4px;
 }
 
 .card-dialog-body {
